首页轮播图

--- a/miniprogram/pages/playlist/playlist.wxml
+++ b/miniprogram/pages/playlist/playlist.wxml
@@ -1,2 +1,7 @@
-<!--miniprogram/pages/playlist/playlist.wxml-->
-<text>miniprogram/pages/playlist/playlist.wxml</text>
+<swiper indicator-dots="true" autoplay="true" interval="2500" duration="1000">
+  <block wx:for="{{ swiperImgUrls }}" wx:key="key">
+    <swiper-item>
+      <image src="{{ item.url }}" mode="widthFix" class="img"></image>
+    </swiper-item>
+  </block>
+</swiper>
