--- a/miniprogram/pages/playlist/playlist.wxml
+++ b/miniprogram/pages/playlist/playlist.wxml
@@ -5,3 +5,9 @@
     </swiper-item>
   </block>
 </swiper>
+
+<view class="playlist-container">
+  <block wx:for="{{ playList }}" wx:key="{{}}">
+    <list-box playlist="{{ item }}"></list-box>
+  </block>
+</view>
