播放列表的样式调整 && 数字处理

--- a/miniprogram/components/playlist/playlist.wxml
+++ b/miniprogram/components/playlist/playlist.wxml
@@ -2,6 +2,6 @@
 
 <view class="playlist-container">
   <image src="{{playlist.picUrl}}" class="playlist-img"></image>
-  <text class="playlist-playcount">{{playlist.playCount}}</text>
+  <text class="playlist-playcount">{{_count}}</text>
   <view class="playlist-name">{{playlist.name}}</view>
 </view>
