--- a/miniprogram/components/musiclist/musiclist.wxml
+++ b/miniprogram/components/musiclist/musiclist.wxml
@@ -1,7 +1,7 @@
 <!--components/musiclist/musiclist.wxml-->
 
 <block wx:for="{{ musiclist }}" wx:key="id">
-  <view class="musiclist-container {{ item.id === playingId ? 'playing' : '' }}" bindtap="onSelect" data-musicid="{{item.id}}">
+  <view class="musiclist-container {{ item.id === playingId ? 'playing' : '' }}" bindtap="onSelect" data-musicid="{{item.id}}" data-index="{{ index }}">
     <view class="musiclist-index">{{ index + 1 }}</view>
     <view class="musiclist-info">
       <view class="musiclist-name">
