利用iconfont字体完成播放控制布局

--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -6,3 +6,10 @@
     <image class="player-img" src="{{ picUrl }}"></image>
   </view>
 </view>
+
+<view class="control">
+  <text class="iconfont icon-shangyishoushangyige"></text>
+  <!-- <text class="iconfont icon-zanting1"></text> -->
+  <text class="iconfont icon-zanting"></text>
+  <text class="iconfont icon-xiayigexiayishou"></text>
+</view>
