--- a/miniprogram/pages/player/player.wxss
+++ b/miniprogram/pages/player/player.wxss
@@ -47,6 +47,11 @@
   background: url('https://s3.music.126.net/m/s/img/needle.png?702cf6d95f29e2e594f53a3caab50e12') no-repeat center/contain;
   transform: rotate(-15deg);
   transform-origin: 24rpx 10rpx;
+  transition: transform 0.5s ease;
+}
+
+.play.player-disc::after {
+  transform: rotate(0deg);
 }
 
 .player-img {
@@ -58,6 +63,20 @@
   top: 50%;
   margin-top: -184rpx;
   margin-left: -184rpx;
+}
+
+.rotation {
+  animation: rotation 12s linear infinite;
+}
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .control {
@@ -77,7 +96,7 @@
   font-size: 80rpx;
 }
 
-.icon-zanting {
+.icon-zanting, .icon-bofangsanjiaoxing {
   font-size: 80rpx;
   margin: 0 120rpx;
 }
