--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -2,13 +2,22 @@
 <view class="player-mask"></view>
 
 <view class="player-disc-container">
+  <!-- 封面信息 -->
   <view class="player-disc {{ isPlaying?'play':'' }}">
     <image class="player-img rotation {{ isPlaying ? '' : 'rotation-paused'}}" src="{{ picUrl }}"></image>
   </view>
-</view>
 
-<view class="control">
-  <text class="iconfont icon-shangyishoushangyige" bindtap="onPrev"></text>
-  <text class="iconfont {{ isPlaying ? 'icon-zanting':'icon-bofangsanjiaoxing' }}" bindtap="togglePlaying"></text>
-  <text class="iconfont icon-xiayigexiayishou" bindtap="onNext"></text>
+  <!-- 进度条 -->
+  <view class="progress-bar">
+    <w-progress-bar />
+  </view>
+
+  <!-- 控制面板 -->
+  <view class="control">
+    <text class="iconfont icon-shangyishoushangyige" bindtap="onPrev"></text>
+    <text class="iconfont {{ isPlaying ? 'icon-zanting':'icon-bofangsanjiaoxing' }}" bindtap="togglePlaying"></text>
+    <text class="iconfont icon-xiayigexiayishou" bindtap="onNext"></text>
+  </view>
+
+
 </view>
