--- a/miniprogram/pages/player/player.wxss
+++ b/miniprogram/pages/player/player.wxss
@@ -104,3 +104,11 @@
   font-size: 80rpx;
   margin: 0 120rpx;
 }
+
+.progress-bar {
+  width: 90%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 24%;
+}
