当进度条播放完毕后，通过触发onNext进入下一首

--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -9,7 +9,7 @@
 
   <!-- 进度条 -->
   <view class="progress-bar">
-    <w-progress-bar />
+    <w-progress-bar bind:musicEnd="onNext" />
   </view>
 
   <!-- 控制面板 -->
