--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -3,9 +3,12 @@
 
 <view class="player-disc-container">
   <!-- 封面信息 -->
-  <view class="player-disc {{ isPlaying?'play':'' }}">
+  <view class="player-disc {{ isPlaying?'play':'' }}" bindtap="toggleLyricShow" hidden="{{ isLyricShow }}">
     <image class="player-img rotation {{ isPlaying ? '' : 'rotation-paused'}}" src="{{ picUrl }}"></image>
   </view>
+
+  <!-- 歌词 -->
+  <w-lyric isLyricShow="{{ !isLyricShow }}" bindtap="toggleLyricShow" lyric="{{ lyric }}" />
 
   <!-- 进度条 -->
   <view class="progress-bar">
