--- a/miniprogram/pages/player/player.wxml
+++ b/miniprogram/pages/player/player.wxml
@@ -12,7 +12,7 @@
 
   <!-- 进度条 -->
   <view class="progress-bar">
-    <w-progress-bar bind:musicEnd="onNext" bind:onPlay="onPlay" bind:onPause="onPause" bind:timeUpdate="timeUpdate" />
+    <w-progress-bar bind:musicEnd="onNext" bind:onPlay="onPlay" bind:onPause="onPause" bind:timeUpdate="timeUpdate" isSame="{{ isSame }}" />
   </view>
 
   <!-- 控制面板 -->
