底部弹出组件 & 授权组件

--- a/miniprogram/pages/blog/blog.wxml
+++ b/miniprogram/pages/blog/blog.wxml
@@ -8,4 +8,11 @@
       <w-search iconfont="iconfont" />
     </view>
   </view>
+
+  <!-- 底部弹出层 -->
+  <w-login modalShow="{{ modalShow }}"
+    bind:loginsuccess="onLoginSuccess"
+    bind:loginfail="onLoginFail"
+    >
+  </w-login>
 </view>
