--- a/miniprogram/pages/blog-edit/blog-edit.wxml
+++ b/miniprogram/pages/blog-edit/blog-edit.wxml
@@ -19,5 +19,5 @@
 
 <view class="footer ">
   <text class="words-num ">{{ wordsNum }} / 140</text>
-  <button size="mini " class="send-btn ">发布</button>
+  <button size="mini" class="send-btn" bindtap="send">发布</button>
 </view>
