编辑页面的样式调整

--- a/miniprogram/pages/blog-edit/blog-edit.wxss
+++ b/miniprogram/pages/blog-edit/blog-edit.wxss
@@ -40,6 +40,10 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 20rpx;
+  position: absolute;
+  left: 0;
+  top: 360rpx;
+  padding: 20rpx;
 }
 
 .img-wrap {
