--- a/miniprogram/pages/playlist/playlist.wxml
+++ b/miniprogram/pages/playlist/playlist.wxml
@@ -7,7 +7,7 @@
 </swiper>
 
 <view class="playlist-container">
-  <block wx:for="{{ playList }}" wx:key="{{}}">
+  <block wx:for="{{ playList }}" wx:key="index">
     <w-playlist playlist="{{ item }}"></w-playlist>
   </block>
 </view>
