--- a/miniprogram/pages/profile/profile.wxss
+++ b/miniprogram/pages/profile/profile.wxss
@@ -1,1 +1,78 @@
-/* miniprogram/pages/profile/profile.wxss */
+.profile-header {
+  background: #d4237a;
+  color: #f1f1f1;
+  height: 480rpx;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-weight: 300;
+  text-shadow: 0 0 3px raba(0, 0, 0, 0.3);
+}
+
+.userimg {
+  width: 200rpx;
+  height: 200rpx;
+  display: block;
+  overflow: hidden;
+  border: 6rpx solid #ddd;
+  border-radius: 50%;
+}
+
+.nickname {
+  font-size: 36rpx;
+  margin-top: 20rpx;
+  font-weight: 400;
+}
+
+/* 导航 */
+
+.nav {
+  overflow: hidden;
+  margin-right: 30rpx;
+  margin-left: 30rpx;
+  border-radius: 20rpx;
+  margin-bottom: 50rpx;
+  margin-top: 50rpx;
+  box-sizing: border-box;
+  display: block;
+}
+
+.nav-item {
+  padding-right: 90rpx;
+  position: relative;
+  display: flex;
+  padding: 0 30rpx;
+  min-height: 100rpx;
+  background-color: #fff;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  border-bottom: 1rpx solid rgba(0, 0, 0, 0.1);
+}
+
+.content {
+  font-size: 30rpx;
+  line-height: 1.6em;
+  flex: 1;
+}
+
+.text {
+  color: #808080;
+}
+
+.content .iconfont {
+  color: #d4237a;
+  font-weight: 600;
+  margin-right: 30rpx;
+}
+
+.content .icon-xiangyou {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 30rpx;
+  bottom: 0;
+  color: #808080;
+  font-size: 28rpx;
+}
