实现模糊搜索

--- a/miniprogram/pages/blog/blog.wxml
+++ b/miniprogram/pages/blog/blog.wxml
@@ -5,7 +5,7 @@
       <i class="iconfont icon-fabu"></i>
     </view>
     <view class="search-container">
-      <w-search iconfont="iconfont" />
+      <w-search iconfont="iconfont" bind:search="onSearch" />
     </view>
   </view>
 
