通过云函数查询数据库，获取我的发布

--- a/miniprogram/pages/bloghistory/bloghistory.wxml
+++ b/miniprogram/pages/bloghistory/bloghistory.wxml
@@ -1,2 +1,7 @@
-<!--pages/bloghistory/bloghistory.wxml-->
-<text>pages/bloghistory/bloghistory.wxml</text>
+<view>
+	<block wx:for="{{ blogList }}" wx:key="_id">
+		<view class="blog-panel">
+			<w-blog-card blog="{{ item }}" />
+		</view>
+	</block>
+</view>
