--- a/miniprogram/components/blog-card/blog-card.wxml
+++ b/miniprogram/components/blog-card/blog-card.wxml
@@ -10,7 +10,7 @@
   <view class="blog-img">
     <block wx:for="{{blog.img}}" wx:key="index">
       <image class="img" src="{{item}}" mode="aspectFill" 
-      bindtap="onPreviewImg" 
+      catch:tap="onPreviewImg" 
       data-imgsrc="{{item}}" 
       data-imgs="{{blog.img}}"
       ></image>
