--- a/miniprogram/pages/blog/blog.wxml
+++ b/miniprogram/pages/blog/blog.wxml
@@ -12,10 +12,11 @@
 	<!-- 博客卡片列表展示 -->
 	<view class="blog-list">
 		<block wx:for="{{ blogList }}" wx:key="_id">
-			<view class="blog-panel"></view>
-			<w-blog-card blog="{{item}}" />
-			<!-- 博客评论与分享 -->
-			<w-blog-ctrl blogId="{{ item._id }}" iconfont="iconfont" icon-pinglun="icon-pinglun" icon-share_icon="icon-share_icon" />
+			<view class="blog-panel">
+				<w-blog-card bind:tap="goComment" blog="{{item}}" data-blogid="{{item._id}}" />
+				<!-- 博客评论与分享 -->
+				<w-blog-ctrl blogId="{{ item._id }}" blog="{{item}}" iconfont="iconfont" icon-pinglun="icon-pinglun" icon-share_icon="icon-share_icon" />
+			</view>
 		</block>
 	</view>
 
