--- a/miniprogram/components/blog-ctrl/blog-ctrl.wxss
+++ b/miniprogram/components/blog-ctrl/blog-ctrl.wxss
@@ -10,7 +10,7 @@
   flex: 1;
   text-align: center;
   color: rgba(40, 47, 60, 0.8);
-  font-size: 26rpx;
+  font-size: 30rpx;
   height: 60rpx;
   display: flex;
   flex-direction: row;
@@ -22,10 +22,6 @@
   height: 100%;
   margin-right: 12rpx;
   font-size: 35rpx;
-}
-
-.ctrl-item text {
-  font-size: 32rpx;
 }
 
 .comment-content {
@@ -41,5 +37,26 @@
   right: 10rpx;
   color: #fff;
   background: #d4237a;
+}
 
+.share-btn {
+  background-color: #fff;
+  color: rgba(40, 47, 60, 0.8);
+  font-size: 30rpx;
+  padding: 0;
+  height: 100%;
+  border: none;
+  font-weight: 380;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.share-btn::after {
+  display: none;
+}
+
+.share-hover::after {
+  border: 0;
 }
