--- a/miniprogram/pages/blog/blog.wxml
+++ b/miniprogram/pages/blog/blog.wxml
@@ -15,7 +15,7 @@
 			<view class="blog-panel">
 				<w-blog-card bind:tap="goComment" blog="{{item}}" data-blogid="{{item._id}}" />
 				<!-- 博客评论与分享 -->
-				<w-blog-ctrl blogId="{{ item._id }}" blog="{{item}}" iconfont="iconfont" icon-pinglun="icon-pinglun" icon-share_icon="icon-share_icon" />
+				<w-blog-ctrl blogId="{{ item._id }}" blog="{{ item }}" iconfont="iconfont" icon-pinglun="icon-pinglun" icon-fenxiang="icon-fenxiang" />
 			</view>
 		</block>
 	</view>
